# ozon_scraper

./: .pre-commit-config.yaml  main.py  pyproject.toml
utils/: collect_product_data.py  product_data.py  scroll.py
